<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnAddParking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addParking" />

    <Button
        android:id="@+id/btnReceipt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receipt" />

    <Button
        android:id="@+id/btnReceiptList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/receiptList" />

    <Button
        android:id="@+id/btnNearbyFacilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nearbyFacilities" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/UpdateProfile" />

    <Button
        android:id="@+id/btnManual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual" />

    <Button
        android:id="@+id/btnSupport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/consumerSupport" />

    <Button
        android:id="@+id/btnSignOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signout" />
</LinearLayout>